sort option fixed

--- a/Durak-Team25/README
+++ b/Durak-Team25/README
@@ -7,4 +7,4 @@ There are quiet a few parameters to play around with, feel free to explore them 
 
 Here are some execution options:
 1. Play against AI : --opponent ExpectimaxAgent --depth 2
-2. Explore AI work : --agent ExpectimaxAgent --dpeth 2
+2. Explore AI work : --agent ExpectimaxAgent --depth 2
