--- a/Durak-Team25/README
+++ b/Durak-Team25/README
@@ -1,10 +1,13 @@
 Hello!
 This is an AI project by: Yam Fine, Artume Pichersky, Miryam Yakubov, Nadav Finkel
 
-We have implemented MiniMax algorithms (AlphaBetPruning, ExpectiMax, Minimax) along side with Gentic
+We have implemented MiniMax algorithms (AlphaBetPruning, ExpectiMax, Minimax) along side with a Genetic
 Algorithm.
 There are quiet a few parameters to play around with, feel free to explore them with -h.
 
-Here are some execution options:
+Here are some execution examples:
 1. Play against AI : --opponent ExpectimaxAgent --depth 2
 2. Explore AI work : --agent ExpectimaxAgent --depth 2
+3. Genetic as shown in the video : --random_seed 47 --agent GeneticAgent
+                                   --num_of_games 2 --num_of_generations 4
+                                   --num_of_offsprings 2
